k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ior-gestao
  labels:
    app.kubernetes.io/name: ior-gestao
